<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/checkbox_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textColor="#3E2723"
            tools:ignore="RtlSymmetry" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:textColor="#3E2723"
            android:layout_weight="1"
            tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+5 ₹"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:textColor="@color/white"
                android:backgroundTint="#5D4037"
                android:background="#5D4037"
                android:id="@+id/dec_id"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="@string/Dec"
                tools:ignore="UnusedAttribute,UsingOnClickInXml" />

            <TextView

                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/Initial_value"
                android:textColor="#3E2723"
                android:textSize="16sp" />

            <Button
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:textColor="@color/white"
                android:backgroundTint="#5D4037"
                android:background="#5D4037"
                android:id="@+id/inc_id"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="@string/Inc"

                tools:ignore="UnusedAttribute,UsingOnClickInXml" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />

    </LinearLayout>
</ScrollView>